--- a/package.json
+++ b/package.json
@@ -9,22 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.1.0",
     "argon2": "^0.41.1",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "firebase": "^10.14.1",
-    "firebase-admin": "^12.6.0",
+    "firebase-admin": "^12.7.0",
     "jsonwebtoken": "^9.0.2",
+    "midtrans-client": "^1.4.2",
     "next": "14.0.3",
     "next-auth": "^4.24.8",
     "next-firebase-auth-edge": "^1.7.1",
+    "prisma": "^6.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.4.0",
-    "sass": "^1.80.4"
+    "sass": "^1.80.4",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
