--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "skipLibCheck": true,
     "strict": true,
     "noEmit": true,
+    "typeRoots": ["./node_modules/@types", "./types"],
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "bundler",
